--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="./public/smallLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MbongoElvis</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/loadingio/transition.css@v2.0.0/dist/transition.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/loadingio/transition.css@v2.0.0/dist/transition.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
     <!-- google font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,57 +21,179 @@
   <body>
     <div class="wrapper w-full min-h-screen bg-main">
       <!-- nav bar -->
-      <div class="sticky top-0 left-0 bg-white z-10">
-        <nav class="container px-2 lg:px-0 min-h-6 mx-auto flex items-center justify-between py-3">
-        <div class="logo">
-          <img src="./public/smallLogo.png" alt="Logo" class="lg:hidden cursor-pointer ld ld-blur-in">
-          <img src="./public/main logo.png" alt="Logo" class="hidden lg:block cursor-pointer ld ld-blur-in">
-        </div>
-        <!-- nav links -->
-        <div class="links gap-[4rem] hidden lg:flex">
-          <a href="#">Home</a>
-          <a href="#">About</a>
-          <a href="#">Project</a>
-          <a href="./public/MBONGO Elvis M Web Developer +237671267490-4.pdf" download>Download CV</a>
-        </div>
-        <!-- let talk button -->
-        <button class="px-10 rounded-xl hidden lg:flex py-3 bg-black text-white ld ld-bounce-in">Let talk</button>
-        <!-- mobile manu -->
-        <div class="lg:hidden">
-          <div class="menu-btn lg:hidden flex flex-col gap-1 py-3 cursor-pointer">
-            <div class="bg-black w-8 h-1 rounded-xl top"></div>
-            <div class="bg-black w-8 h-1 rounded-xl middel"></div>
-            <div class="bg-black w-8 h-1 rounded-xl bottom"></div>
+      <div class="sticky top-0 left-0 bg-white z-[2]">
+        <nav
+          class="container px-2 lg:px-0 h-[70px] mx-auto flex items-center justify-between"
+        >
+          <div class="logo">
+            <img
+              src="./public/smallLogo.png"
+              alt="Logo"
+              class="lg:hidden cursor-pointer ld ld-blur-in"
+            />
+            <img
+              src="./public/main logo.png"
+              alt="Logo"
+              class="hidden lg:block cursor-pointer ld ld-blur-in"
+            />
           </div>
-        </div>
-      </nav>
+          <!-- nav links -->
+          <div class="links gap-[4rem] hidden lg:flex h-full">
+            <a href="#" class="link">Home</a>
+            <a href="#about" class="link">About</a>
+            <a href="#" class="link">Project</a>
+            <a
+              href="./public/MBONGO Elvis M Web Developer +237671267490-4.pdf"
+              class="link"
+              download
+              >Download CV</a
+            >
+            <div class="cursor"></div>
+          </div>
+          <!-- let talk button -->
+          <button
+            class="px-10 rounded-xl hidden lg:flex py-3 bg-black text-white ld ld-bounce-in"
+          >
+            Let talk
+          </button>
+          <!-- mobile manu -->
+          <div class="lg:hidden z-10">
+            <div
+              class="menu-btn lg:hidden flex flex-col gap-1 py-3 cursor-pointer"
+            >
+              <div class="bg-black w-8 h-1 rounded-xl top"></div>
+              <div class="bg-black w-8 h-1 rounded-xl middel"></div>
+              <div class="bg-black w-8 h-1 rounded-xl bottom"></div>
+            </div>
+          </div>
+        </nav>
       </div>
 
       <!-- hero section -->
       <div class="w-full relative">
-        <p class="absolute text-[11.2vw] left-[2%] font-bold opacity-30">WEB DEVELOPER</p>
-        <img src="./public/Vector-dot.png" alt="" class="absolute left-[40%] lg:left-[40%] md:left-[70%] top-[60%]  ld ld-vortex-alt-in">
-        <img src="./public/Vector-square.png" alt="" class="absolute top-[40%] lg:top-[30%] lg:left-[55%] md:left-[80%]">
-        <img src="./public/shape5 1.png" alt="" class="absolute bottom-5 lg:top-[70%] md:bottom-[9rem]">
-        <section class="w-full min-h-[92vh] container mx-auto grid grid-cols-1 lg:grid-cols-2 ">
-        <div class="flex flex-col justify-center items-center lg:items-start h-full py-[7rem]">
-          <h1 class="text-[10vw] md:text-[6vw] lg:text-[3vw] font-bold">HI there,</h1>
-          <h1 class="text-[8vw] md:text-[6vw] lg:text-[3vw] lg:text-start text-center font-bold mb-5">Am called Mbongo elvis</h1>
-          <p class="text-[110%] md:[130%] text-center lg:text-start lg:text-2xl">I specialize in crafting immersive <br class="md:hidden lg:flex"> digital experiences that captivate <br> and engage individuals by seamlessly <br class="md:hidden lg:block"> integrating development and design.</p>
-        </div>
-        <div class="flex-1 relative overflow-hidden">
-          <img src="./public/me.png" class="min-w-[90%] lg:mt-[3rem]" alt="hero">
-        </div>
-      </section>
+        <p class="absolute text-[11.2vw] left-[2%] font-bold opacity-30">
+          WEB DEVELOPER
+        </p>
+        <img
+          src="./public/Vector-dot.png"
+          alt=""
+          class="absolute left-[40%] lg:left-[40%] md:left-[70%] top-[60%]"
+        />
+        <img
+          src="./public/Vector-square.png"
+          alt=""
+          class="absolute top-[40%] lg:top-[30%] lg:left-[55%] md:left-[80%]"
+        />
+        <img
+          src="./public/shape5 1.png"
+          alt=""
+          class="absolute bottom-5 lg:top-[70%] md:bottom-[9rem]"
+        />
+        <section
+          class="w-full min-h-[92vh] container mx-auto grid grid-cols-1 lg:grid-cols-2"
+        >
+          <div
+            class="flex flex-col justify-center items-center lg:items-start h-full py-[7rem]"
+          >
+            <h1 class="text-[10vw] md:text-[6vw] lg:text-[3vw] font-bold">
+              HI there,
+            </h1>
+            <h1
+              class="text-[8vw] md:text-[6vw] lg:text-[3vw] lg:text-start text-center font-bold mb-5"
+            >
+              Am called Mbongo elvis
+            </h1>
+            <p
+              class="text-[110%] md:[130%] text-center lg:text-start lg:text-2xl opacity-[.6]"
+            >
+              I specialize in crafting immersive
+              <br class="md:hidden lg:flex" />
+              digital experiences that captivate <br />
+              and engage individuals by seamlessly
+              <br class="md:hidden lg:block" />
+              integrating development and design.
+            </p>
+          </div>
+          <div class="flex-1 relative overflow-hidden">
+            <img
+              src="./public/me2.png"
+              class="min-w-[100%] lg:mt-[3rem] hero-me"
+              alt="hero"
+            />
+          </div>
+        </section>
       </div>
 
       <!-- about me section -->
-      <div class="w-full h-screen">
+      <div class="w-full min-h-screen relative pt-12" id="about">
+        <div class="flex gap-[3%] flex-wrap justify-center">
+          <p class="font-bold opacity-[30%] text-[7vw]">GIT</p>
+          <p class="font-bold opacity-[30%] text-[7vw]">HTML</p>
+          <p class="font-bold opacity-[30%] text-[7vw]">CSS</p>
+          <p class="font-bold opacity-[30%] text-[7vw]">JAVASCRIPT</p>
+          <p class="font-bold opacity-[30%] text-[7vw]">TAILWIND</p>
+          <p class="font-bold opacity-[30%] text-[7vw]">REACT</p>
+        </div>
 
+        <!-- about me -->
+        <img
+          src="./public/shape5 1.png"
+          class="absolute -right-[30px] w-[45vw] lg:w-[25vw] lg:top-[12rem] top-[5rem]"
+          alt=""
+        />
+        <div class="container mx-auto min-h-12 mt-[12rem] grid lg:grid-cols-2 grid-cols-1">
+          <div class="mb-12 lg:mb-0 flex items-center justify-center">
+            <img src="./public/sideImage.png" alt="" />
+          </div>
+          <div class="flex flex-col justify-center item-center min-h-12">
+            <h1 class="text-[15vw] md:text-[8vw] lg:text-[5vw] font-bold text-center lg:text-start">ABOUT ME</h1>
+            <p class="w-[90%] mx-auto lg:mx-0 lg:text-2xl leading-[25px] lg:leading-[40px] opacity-[.6] text-center lg:text-start pb-12 lg:pb-0">
+              I am a developer based in Buea, Cameroon, with expertise in
+              frontend development. I specialize in Developing, intuitive, and
+              minimalistic designs for startups and small businesses to help
+              them stand out in the digital landscape with a powerful impact
+              When I am not developing or eating :) , I enjoy watching movies
+              and playing games.
+            </p>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- services -->
+      <div class="w-full min-h-screen">
+        <div class="container mx-auto pt-[7rem] pl-2 lg:pl-0">
+          <h1 class="text-[15vw] md:text-[8vw] lg:text-[5vw] font-bold text-center lg:text-start">SERVICES</h1>
+          <div class="grid grid-cols-1 gap-[5%] lg:grid-cols-2">
+            <div>
+              <h2 class="font-bold text-4xl my-4">My expertise</h2>
+              <p class="opacity-[.6] lg:text-2xl leading-[25px] md:leading-[30px] text-start">I focus on all things design and web related. With each of my services, my goal is to deliver an impactful and elevating digital experience for everyone.</p>
+            </div>
+            <div>
+              <p class="opacity-[.6] font-bold lg:text-[3vw] md:text-[5vw] text-[7vw]">Frontend web development</p>
+              <p class="opacity-[.6] font-bold lg:text-[3vw] md:text-[5vw] text-[7vw]">Web Design</p>
+              <p class="opacity-[.6] font-bold lg:text-[3vw] md:text-[5vw] text-[7vw]">Responsive Web design</p>
+            </div>
+          </div>
+          <div class="grid grid-cols-1 gap-[5%] lg:grid-cols-2 mt-12">
+            <div>
+              <h2 class="font-bold text-4xl my-4">My Digital Tool Box</h2>
+              <p class="opacity-[.6] lg:text-2xl leading-[25px] md:leading-[30px] text-start">These are my go to tech stack to make any projects happen. I am always eager of learning more about my current stack, and new technologies that could expand my horizons.</p>
+            </div>
+            <div>
+              <p class="opacity-[.6] font-bold lg:text-[3vw] md:text-[5vw] text-[7vw]">HTML</p>
+              <p class="opacity-[.6] font-bold lg:text-[3vw] md:text-[5vw] text-[7vw]">CSS</p>
+              <p class="opacity-[.6] font-bold lg:text-[3vw] md:text-[5vw] text-[7vw]">JAVASCRIPT</p>
+              <p class="opacity-[.6] font-bold lg:text-[3vw] md:text-[5vw] text-[7vw]">TAILWIND</p>
+              <p class="opacity-[.6] font-bold lg:text-[3vw] md:text-[5vw] text-[7vw]">REACT.JS</p>
+              <p class="opacity-[.6] font-bold lg:text-[3vw] md:text-[5vw] text-[7vw]">NODEJS</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <!-- js link -->
-    <script src="https://unpkg.com/@studio-freight/lenis@1.0.34/dist/lenis.min.js"></script> 
+    <script src="https://unpkg.com/@studio-freight/lenis@1.0.34/dist/lenis.min.js"></script>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
